<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <EditText
        android:id="@+id/inputSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwords_hint_site"
        android:inputType="textUri"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwords_hint_username"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwords_hint_password"
        android:inputType="textPassword" />

</LinearLayout>
